manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signaling
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: signaling
  template:
    metadata:
      labels:
        deployment: signaling
    spec:
      containers:
      - name: signaling
        image: "europe-docker.pkg.dev/poki-core/netlib/signaling:$GITHUB_SHA"
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - name: signaling
          containerPort: 8080
        startupProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 1
          failureThreshold: 10
          initialDelaySeconds: 1
