manifest/ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: netlib-signaling
  annotations:
    cloud.google.com/backend-config: '{"default": "netlib-backendconfig"}'
spec:
  selector:
    deployment: signaling
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: signaling
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netlib
  annotations:
    # gcloud compute addresses create netlib --global
    kubernetes.io/ingress.global-static-ip-name: netlib
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: netlib-ssl
  rules:
  - host: netlib.poki.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netlib-signaling
            port:
              name: http
